--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,8 @@ body {
     color:royalblue;
 }
 header h1 {
-    font-size:300%;
+    font-size:2000%;
+    text-align: center;
 }
 header h2 {
     font-size: 900%;
