--- a/style.css
+++ b/style.css
@@ -15,9 +15,9 @@
 }
 .logo{
     color: #e5dfdb;
-    font-size:40px;
-    font-family: 'Times New Roman', Times, serif;
-    padding-right: 100px;
+    font-size:80px;
+    font-family: 'Times New Roman';
+    padding-right: 200px;
     float: right;
     padding-top: 10px;
 }
