--- a/style.css
+++ b/style.css
@@ -1,67 +1,108 @@
-*{
-    margin: 0;
-    padding: 0;
+* {
+    margin: auto;
+    scroll-padding-top: 0%;
 }
+
+body {
+    color: orangered;
+}
+
+#git_header {
+    color: rgb(166, 19, 19);
+}
+h1 {
+    font-size: 100px;
+}
+
+h2 {
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 80px;
+    color: orangered;
+    line-height: 3em;
+   }
+   h3{
+    font-size: 70px;
+    line-height: 3em;
+   }
+
+.first_text {
+    color: #141212;
+}
+
+p {
+    line-height: 2em;
+}
+
 .navbar {
     width: 800px;
     height: 75px;
     margin: auto;
-    
+
 }
-.icon{
+
+.icon {
     width: 200px;
     float: left;
     height: 70px;
 }
-.logo{
-    color: #e5dfdb;
-    font-size:80px;
+
+.logo {
+    color: orange;
+    font-size: 3vw;
     font-family: 'Times New Roman';
-    padding-right: 200px;
-    float: right;
-    padding-top: 10px;
-    align-content: center;
+    padding-left: 5vw;
+    float: left;
+    padding-top: 100px;
+    -webkit-text-stroke: 2px black;
+    -webkit-font-smoothing: antialiased;
 }
-.menu{
+
+.menu {
     width: 400;
     float: left;
     height: 70px;
 }
-ul{
-    float:left;
+
+ul {
+    float: left;
     display: flex;
-    justfy-content:center;
-    align-items:center;
+    justify-content: center;
+    align-items: center;
 }
-ul li{
+
+ul li {
     list-style: none;
     margin-left: 60px;
     margin-top: 30px;
     font-size: 30px;
-    
+
 }
-ul li a{
+
+ul li a {
     text-decoration: none;
     color: black;
     font-weight: bold;
     font-family: Georgia;
     transition: 0.2s ease-in-out;
 }
-ul li a:hover{
-    color: rgb(214, 226, 43);
+
+ul li a:hover {
+    color: orange;
 }
-.search{
+
+.search {
     width: 350px;
-    float: left;
+    float: right;
     margin-left: 300px;
 
 }
+
 .srch {
     font-family: Aria;
     width: 200px;
     height: 40px;
     background: transparent;
-    border: 1px solid royalblue;
+    border: 2px solid rgb(10, 10, 9);
     margin-top: 13px;
     color: #fff;
     border-right: none;
@@ -72,18 +113,30 @@ ul li a:hover{
     border-top-left-radius: 5px;
 
 }
-.btn:focus{
 
-outline: none;
-}   
-.srch:focus{
-outline: none;
+.btn:focus {
+
+    outline: none;
 }
 
-body{
-    background-color: #ff7200;
+.srch:focus {
+    outline: none;
 }
-#blue{
-    background-color: rgb(147, 145, 146);
+
+#blue {
+    background-color: hsl(70, 7%, 84%);
     height: 150px;
+}
+
+.text {
+    color: whitesmoke font-size:50px;
+    font-family: 'Times New Roman';
+}
+
+.test {
+    color: black;
+    font-size: 40px;
+    padding: 0px 10vw 0px 10vw;
+    -webkit-text-stroke: 0px black;
+    -webkit-font-smoothing: antialiased;
 }
