--- a/style.css
+++ b/style.css
@@ -2,13 +2,15 @@
     margin: auto;
     scroll-padding-top: 0%;
 }
-footer{
+
+footer {
     font-size: 120;
-    color: black;
+    color: rgb(11, 10, 10);
 }
 
 body {
-    color: orangered;
+    background: orangered url('big5/t1.jpg');
+
 }
 
 #git_header {
@@ -17,6 +19,9 @@ body {
 
 h1 {
     font-size: 100px;
+    line-height: 1em;
+    color:orangered
+
 }
 
 h2 {
@@ -37,6 +42,8 @@ h3 {
 
 p {
     line-height: 2em;
+    color: green;
+    fo
 }
 
 .navbar {
@@ -46,6 +53,11 @@ p {
 
 }
 
+#bar {
+    width: 100%;
+    background-color: orangered;
+}
+
 .icon {
     width: 200px;
     float: left;
@@ -53,20 +65,19 @@ p {
 }
 
 .logo {
-    color: orange;
-    font-size: 3vw;
+    color: olivedrab
+    font-size: 80;
     font-family: 'Times New Roman';
-    padding-left: 5vw;
+    padding-left: 2em;
     float: left;
-    padding-top: 70px;
-    -webkit-text-stroke: 2px black;
-    -webkit-font-smoothing: antialiased;
+    padding-top: none;
 }
 
 .menu {
     width: 400;
     float: left;
     height: 70px;
+
 }
 
 ul {
@@ -110,13 +121,12 @@ ul li a:hover {
     background: transparent;
     border: 2px solid rgb(10, 10, 9);
     margin-top: 13px;
-    color: #fff;
+    color: black;
     border-right: none;
     font-size: 30px;
     float: left;
     padding: 20px;
-    border-bottom-left-radius: 5px;
-    border-top-left-radius: 5px;
+    border: thick outset rgb(119, 80, 80);
 }
 
 .btn {
