--- a/styles.css
+++ b/styles.css
@@ -1,84 +1,58 @@
 * {
-	margin: 2px;
-	padding: 2px;
+	margin: 0;
+	padding: 0;
+	font-family: 'Courier New', Courier, monospace;
 }
 
-/*.wrapper{
-	width: 100%;
-	max-width: 960;
-	margin: 0 auto;
-}*/
-
-header {
-	padding: 1.5em 0 2em 0;
-	border-bottom: 8px solid orange;
-	background-image: -moz-linear-gradient(30deg, hsl(33, 87%, 50%) 0%, #f6bb73 30%, white 50%, #f6bb73 80%, #f6bb73 100%);
-	background-image: -webkit-linear-gradient(30deg, hsl(33, 13%, 32%) 0%, #f6bb73 30%, white 50%, #f6bb73 80%, #f6bb73 100%);
-
-	background-image: linear-gradient(30deg, #73a7f6 0%, #f6bb73 30%, white 50%, #f6bb73 80%, #f6bb73 100%);
+.wrapper {
+	width: 1000px;
+	margin: auto;
 }
-	h1 {
-		font-size: 100px;
-		font-style: normal;
-		padding: 1em;
-	}
 
-	img {
-		float: left;
-		margin-right: 1em;
-	}
+body {
+	background: url(big5/b.jpg);
+	background-size: cover;
+	position: relative;
 
-	br {
-		clear: left;
-	}
+}
+.nav-menu{
+	float: right;
+	list-style: none;
+	margin-top: 30px;
+	padding-right: 15px;
+}
+.nav-menu li{
+	display: inline-block;
 
-	#Discover  {
-		float: left;
-		width: 450px;
+}
+.nav-menu li a{
+	color: #fff;
+	text-decoration: none;
+	padding: 5px 20px;
+	font-size: 21px;
+}
+.nav-menu li a:hover{
+	background: rgb(245, 245, 245);
+	color: red;
+}
+.logo img{
+	width: 150px;
+	float: left;
+	padding-left: -15%;
+	padding-top: 2%;
+	filter: invert(1);
 
-	}
-
-	#Booking {
-		float: left;
-		width: 450px;
-
-	}
-	#Destinations{
-		float:right;
-		width: 450;
-	}
-
-	footer {
-		clear: both;
-		border-top:2px solid #73a7f6
-	}
-
-	.dropdown-content a {
-		color: solid black;
-		padding: 12px 14px;
-		text-decoration: none;
-		display: block;float:left; 
-	}
-
-	.dropdown {
-		position: relative;
-		display: -webkit-inline-box;
-	}
-
-	.dropdown:hover.dropbtn:focus {
-		background-color: blue;
-	}
-
-	.dropbtn {
-		background-color: #3498DB;
-		color: white;
-		padding: 16px;
-		border: solid black;
-		cursor: pointer;
-	}
-
-	#p {
-		font-size: 100;
-		line-height: 2em;
-
-	}
+.head-text h1{
+	text-align: right;
+	color: white;
+	text-transform: uppercase;
+	font-size: 50px;
+}
+}
+.head-text{
+	position: absolutea;
+	padding-left: -15%;
+	padding-top: 2%;
+	text-align: left;
+	font-size: 30px;
+}
