--- a/styles.css
+++ b/styles.css
@@ -41,13 +41,12 @@ body {
 	padding-left: 5%;
 	padding-top: 4%;
 	filter: invert(1);
-
+}
 .head-text h1{
-	text-align: right;
+	text-align: left;
 	color: white;
 	text-transform: uppercase;
 	font-size: 50px;
-}
 }
 .head-text{
 	position: absolutea;
