--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@
 	width: 1000px;
 	margin: auto;
 }
+/*******Body**********************/
 
 body {
 	background: url(big5/b.jpg);
@@ -15,6 +16,7 @@ body {
 	position: relative;
 
 }
+/**********Navigation Menu***************/
 .nav-menu{
 	float: right;
 	list-style: none;
@@ -35,23 +37,72 @@ body {
 	background: rgb(245, 245, 245);
 	color: red;
 }
+/***********Logo**********************/
 .logo img{
 	width: 150px;
 	float: left;
-	padding-left: 5%;
-	padding-top: 4%;
+	padding-left: 0px;
+	padding-top: 5%;
 	filter: invert(1);
 }
+/*********Page Title********************/
 .head-text h1{
 	text-align: left;
-	color: white;
+	color: #dfd8d2;
 	text-transform: uppercase;
 	font-size: 50px;
+	font-style: normal;
 }
 .head-text{
 	position: absolutea;
 	padding-left: -15%;
-	padding-top: 2%;
+	padding-top: 10%;
 	text-align: left;
 	font-size: 30px;
+}
+/************Headings*************************/
+.head2-text{
+	position: absolute;
+	margin: 10% 33%;
+	text-align: justify;
+	font-size: 40px;
+	color: #0b0b0b;
+	line-height: 2em;
+}
+/**********container********************/
+.container{
+	width: 1200;
+	margin: 0 auto;
+	padding: 10px;
+	background-color: rgba(255, 166, 0, 0.115);
+	border: 3px solid#000000;
+
+}
+.firstDiv{
+	background-color: #f1b204;
+	padding: 5px;	
+	width: 600px;
+	border-radius: 10px;
+	
+	margin: 75% 30%;
+	}
+.firstDiv >h3{
+	text-align: center;
+}
+.firstDiv > p{
+	text-align: center;
+}
+.secondDiv{
+	background-color: yellow;
+	padding: 5px;	
+	width: 600px;
+	border-radius: 10px;
+	
+	
+}
+.secondDiv >h3{
+	text-align: center;
+}
+.secondDiv > p{
+	text-align: center;
 }
