--- a/styles.css
+++ b/styles.css
@@ -63,8 +63,8 @@ body {
 /************Headings*************************/
 .head2-text{
 	position: absolute;
-	margin: 10% 33%;
-	text-align: justify;
+	margin: 20% 33%;
+	text-align: center;
 	font-size: 40px;
 	color: #0b0b0b;
 	line-height: 2em;
