--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,41 @@ body{
 	font-size: 30px;
 	
 }
+
+
+/*MEDIA QUERY */
+.box_1{
+	background-color: grey;
+	color: black;
+	padding: 2rem;
+	font-size: 30px;
+}
+.box_2{
+	background-color: black;
+	color: white;
+	padding: 2rem;
+	font-size: 30px;
+}
+@media screen and(min-width:780px){
+	.container{
+		display:flex;
+	}
+	.box_1{
+		background-color: red;
+	}
+}
+	
+
+
+
+
+/*Navigation Links********/
+.nav-links{
+text-align: center;
+color: blue;
+font-size: 30px;
+line-height: 4em;
+}
 /******header2***************/
 .header2{
 	text-align: center;
