--- a/big5/styles.css
+++ b/big5/styles.css
@@ -1,133 +1,143 @@
 * {
-    margin: 2px;
-    padding: 0px;
-    text-decoration: none;
-    box-sizing: border-box;
-    list-style: none;
-  }
-  body {
-    font-family: montserrat;
-    background-color: rgb(190, 218, 112);
-  }
-  nav {
-    background: #0082e6;
-    height: 80px;
-    width: 100%;
-  }
-  lablel.logo {
-    color: white;
-    font-size: 35px;
-    line-height: 80px;
-    padding: 0 100px;
-    font-weight: bold;
-    text-transform: uppercase;
-  }
-  nav ul {
-    float: right;
-    margin-right: 20px;
-  }
-  nav ul li {
-    display: inline-block;
-    line-height: 80px;
-    margin: 0 15px;
+  margin: 2px;
+  padding: 0px;
+  text-decoration: none;
+  box-sizing: border-box;
+  list-style: none;
+}
+body {
+  font-family: montserrat;
+  background-color: rgb(190, 218, 112);
+}
+nav {
+  background-image: linear-gradient(to right, red , yellow);
+  height: 80px;
+  width: 100%;
+}
+lablel.logo {
+  color: white;
+  font-size: 35px;
+  line-height: 80px;
+  padding: 0 100px;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+nav ul {
+  float: right;
+  margin-right: 20px;
+}
+nav ul li {
+  display: inline-block;
+  line-height: 80px;
+  margin: 0 15px;
+}
+nav ul li a {
+  color: black;
+  font-size: 7px 13px;
+  border-radius: 3px;
+  text-transform: uppercase;
+}
+a.active,
+a:hover {
+  background: #1b9bff;
+  transform: 0.5s;
+}
+.checkbtn {
+  font-size: 30px;
+  color: white;
+  float: right;
+  line-height: 80px;
+  margin-right: 40px;
+  cursor: pointer;
+  display: none;
+}
+#check {
+  display: none;
+}
+
+@media (max-width: 952px) {
+  label.logo {
+    font-size: 30px;
+    padding-left: 50px;     /*********PADDING*/
   }
   nav ul li a {
-    color: black;
-    font-size: 7px 13px;
-    border-radius: 3px;
-    text-transform: uppercase;
+    font-size: 16px;
   }
-  a.active,
-  a:hover {
-    background: #1b9bff;
-    transform: 0.5s;
-  }
+}
+
+@media (max-width: 858px) 
+{
   .checkbtn {
-    font-size: 30px;
-    color: white;
-    float: right;
-    line-height: 80px;
-    margin-right: 40px;
-    cursor: pointer;
-    display: none;
+    display: block;
   }
-  #check {
-    display: none;
-  }
-  
-  @media (max-width: 952px) {
-    label.logo {
-      font-size: 30px;
-      padding-left: 50px;
-    }
-    nav ul li a {
-      font-size: 16px;
-    }
-  }
-  
-  @media (max-width: 858px) 
-  {
-    .checkbtn {
-      display: block;
-    }
-    ul {
-      position: fixed;
-      width: 100%;
-      height: 100vh;
-      background: #e2e5e7;
-      top: 80px;
-      left: 0;
-      text-align: center;
-    }
-    nav ul li{
-      display: block;
-      margin: 50PX 0;
-      line-height: 30px;
-    }
-    nav ul li a{
-      font-size: 20px;
-    }
-  }
-  section{
-    background: url(images/mt.jpg)no repeats;
-    background-size: cover;
-    height: calc(100vh-80px);
-  }
-  
-  /*...body image..,,,,,background image.. used relative measurements*/
-  img{
-    margin: 20px;
-    width: 300;
-    height: 300px;
-    background: #eaeaea;
-   float: center;
-   cursor: pointer; 
-  
-  }
-  .ul-img{
-    margin: 100px;
-    width: 100px;
-      display: block;
-  }
-  
-  /***color rgb...on my head2..*/
-  .head-1{
+  ul {
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    background: #e2e5e7;
+    top: 80px;
+    left: 0;
     text-align: center;
-    color:blue;
-    line-height: 3em;
   }
-  
-  .ul-1{
-    line-height: 5em;
-    text-align: justify;
-    text-transform: uppercase;
-    padding-left: 1em;
-     
+  nav ul li{
+    display: block;
+    margin: 50PX 0;
+    line-height: 30px;
   }
-  /******FONT STYLE......*/
-  .para-1{
-    line-height: 2em;
+  nav ul li a{
     font-size: 20px;
-    font-weight: bolder;
   }
+}
+section{
+  background: url(images/mt.jpg)no repeats;
+  background-size: cover;
+  height: calc(100vh-80px);
+}
+
+
+
+/*...body image..,,,,,background image.. used relative measurements*/
+img{
+  margin: 20px;
+  width: 300;
+  height: 300px;
+  background: #eaeaea;
+ float: center;
+ cursor: pointer; 
+
+}
+.pict{
+  float: left;
+}
+.ul-img{
+  margin: 100px;
+  width: 100px;
+    display: block;
+}
+
+/***color rgb...on my head2..*/
+.head-1{
+  text-align: center;
+  color:blue;
+  line-height: 3em;
+}
+
+.ul-1{
+  line-height: 5em;
+  text-align: justify;
+  text-transform: uppercase;
+  padding-left: 1em;
+   
+}
+/******FONT STYLE......*/
+.para-1{
+  line-height: 2em;
+  font-size: 20px;
+  font-weight: bolder;
+}
+
+.footer {
+  background-image: linear-gradient(180deg, red, yellow);
+  text-align: center;
   
+}
